Fixed UI for Jump To navigation

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -41,6 +41,7 @@ p {
 .comparison-section-heading {
   @extend .title;
   @extend .is-4;
+  margin-top: 3rem;
 }
 
 .help-text {
